--- a/monthly_challenges/challenges/templates/challenges/challenge.html
+++ b/monthly_challenges/challenges/templates/challenges/challenge.html
@@ -6,6 +6,7 @@
 
 
 {% block content %}
+    {% include "./includes/header.html"  with active_page="challenge" %}
     <h1>{{ month_name|title }} Challenge</h1>
     {% if text is not None %}
         <h2>{{ text }}</h2>
